# flowweave

./: README.md  pyproject.toml  requirements.txt
docs/: flow.md  flowweave.md  getting-started.md  task_guide.md  yaml.md
flowweave/: __init__.py  base.py  cli.py  flowweave.py  message.py
